# cs6386

./: CMakeLists.txt  Makefile  caboose.py  lsh.py  main.cu  main.py  requirements.txt
data/movielens/: movielens-rowptrs
experiments/: test_caboose.py  test_faiss.py  test_similaripy.py
